--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,7 @@
 name: Build Archi Plugin
 
 on:
+  workflow_dispatch:       # Enables manual trigger
   push:
     branches: [ main ]
   pull_request:
