--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 
   <properties>
     <maven.compiler.release>21</maven.compiler.release>
-    <tycho.version>5.0.1</tycho.version>
+    <tycho-version>5.0.1</tycho-version>
   </properties>
 
   <build>
