--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,11 @@
       <layout>p2</layout>
       <url>https://download.eclipse.org/releases/2025-12</url>
     </repository>
+               <repository>
+        <id>archi</id>
+        <layout>p2</layout>
+        <url>https://www.archimatetool.com/update-site/</url>
+    </repository>
   </repositories>
 
 </project>
