--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,12 @@ jobs:
       - name: Checkout sources
         uses: actions/checkout@v4
 
+      - name: Checkout Archi
+        uses: actions/checkout@v4
+        with:
+          repository: hacketiwack/archi
+          path: archi
+
       - name: Set up Java
         uses: actions/setup-java@v4
         with:
@@ -21,5 +27,15 @@ jobs:
           java-version: 21
           cache: maven
 
+      - name: Build Archi
+        working-directory: archi
+        run: mvn -B clean verify
+
       - name: Build plugin with Tycho
         run: mvn -B clean verify
+
+      - name: Upload plugin JAR
+        uses: actions/upload-artifact@v4
+        with:
+          name: archi-plugin
+          path: com.archimatetool.script/target/*.jar
