--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Checkout Archi
         uses: actions/checkout@v4
         with:
-          repository: hacketiwack/archi
+          repository: archimatetool/archi
           path: archi
 
       - name: Set up Java
