Skip tests in Maven build for Archi and plugin
Skip tests during the Maven build process for Archi and plugin.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,10 +29,10 @@ jobs:
 
       - name: Build Archi
         working-directory: archi
-        run: mvn -B clean verify
+        run: mvn -B clean -DskipTests verify
 
       - name: Build plugin with Tycho
-        run: mvn -B clean verify
+        run: mvn -B clean -DskipTests verify
 
       - name: Upload plugin JAR
         uses: actions/upload-artifact@v4
