Fix current directory path in workflow
Update the path for the current directory in the build step.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Build plugin with Tycho
         run: |
           ARCHI_REPO=$GITHUB_WORKSPACE #/archi/releng/com.archimatetool.repository/target/repository
-          echo "Current directory: $(realpath ./)"
+          echo "Current directory: $(realpath ./../../archi)"
           echo "Arch repo: $ARCHI_REPO"
           mvn -B -q clean verify -Darchi.p2.repo=$ARCHI_REPO
 
