--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Build plugin with Tycho
         run: |
           ARCHI_REPO=$(realpath  /home/runner/work/archi-scripting-plugin/archi-scripting-plugin/archi)
-          find  /home/runner/work/archi-scripting-plugin/archi-scripting-plugin/archi -type d
+          find  /home/runner/work/archi-scripting-plugin/archi-scripting-plugin/archi -type f -iname "*.jar"
           echo "Arch repo: $ARCHI_REPO"
           mvn -B -q clean verify -Darchi.p2.repo=$ARCHI_REPO
 
